assets/css/main.css
body {
  color: #fff;
  background-color: #333;
}

h1, h2 {
  color: #ffde16;
  text-align: center;
  margin-top: 2em;
  margin-bottom: 1.5em;
}

h3 {
  text-align: center;
  margin-bottom: 1em;
  font-size: 1.5rem;
}

a {
  color: #ffde16;
  text-decoration: none;
  border-bottom: 2px solid #ffde16;
  transition: .5s ease;
}

a:hover, a:focus, a:active {
  color: #eee;
  text-decoration: none;
}

.center {
  text-align: center;
}

.container {
  width: 66%;
}

p {
  text-align: justify;
  font-size: 1.25rem;
  margin-bottom: 2em;
}

.video-container {
  position: relative;
  padding-bottom: 56.25%;
  padding-top: 30px;
  height: 0;
  overflow: hidden;
}
 
.video-container iframe,
.video-container object,
.video-container embed {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.masthead {
  min-height: 30rem;
  position: relative;
  display: table;
  width: 100%;
  height: 100vh;
  padding-top: 8rem;
  padding-bottom: 8rem;
  background-position: center center;
  background-image: linear-gradient(#ccc, #999), url("../2019-08-24-West-Summit.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-blend-mode: darken;
}

.masthead h1 {
  font-size: 3rem;
  margin: 0;
  padding: 0;
  color: white;
  line-height: 1.5;
}

@media screen and (max-width: 600px) {
  #title-text {
    font-size: 10vw;
    margin: auto;
  }

  .container {
    width: 90%;
  }
}

@media screen and (orientation:landscape) and (max-width: 820px) {
  #title-text {
    padding-bottom: 40vh !important;
  }
}

#title-text {
  position: absolute;
  bottom: 0;
  right: 0;
  padding-bottom: 7vh;
  padding-right: 7vw;
  text-align: right;
  width: 66%;
}

.copyright {
  font-size: .8rem;
  color: #999;
  text-align: center;
  padding: 10px;
}

.footer {
  padding-top: 5rem;
  padding-bottom: 5rem;
}

.footer .social-link {
  display: block;
  height: 4rem;
  width: 4rem;
  line-height: 4.3rem;
  font-size: 1.5rem;
  background-color: #666;
  transition: background-color 0.15s ease-in-out;
  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
}

.footer .social-link:hover {
  background-color: #ccc;
  text-decoration: none;
}


.btn-primary {
  background-color: #1D809F !important;
  border-color: #1D809F !important;
  color: #fff !important;
}

.btn-primary:hover, .btn-primary:focus, .btn-primary:active {
  background-color: #155d74 !important;
  border-color: #155d74 !important;
}

.btn-secondary {
  background-color: #ecb807 !important;
  border-color: #ecb807 !important;
  color: #fff !important;
}

.btn-secondary:hover, .btn-secondary:focus, .btn-secondary:active {
  background-color: #ba9106 !important;
  border-color: #ba9106 !important;
}

.btn-dark {
  color: #fff !important;
}

.btn {
  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.1);
  font-weight: 700;
}

.bg-primary {
  background-color: #1D809F !important;
}

.text-primary {
  color: #1D809F !important;
}

.text-secondary {
  color: #ecb807 !important;
}

